Fix signup button on small screen to open navbar collapse

--- a/app/client/module/navigation/navigation.import.less
+++ b/app/client/module/navigation/navigation.import.less
@@ -7,7 +7,7 @@ button.btn-Google{
     background-position-x: 10px;
 }
 
-.navbar-wrapper {
+#mainNavBar .navbar-wrapper {
     position: absolute;
     top: 0;
     right: 0;
@@ -26,6 +26,10 @@ button.btn-Google{
     
     @media (min-width: 768px) {
         margin-top: 20px;
+      
+       .navbar-collapse{
+         display:none
+       }
         
         .container{
             padding-right: 15px;
